<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:background="@drawable/rounded_inputbox"
    android:backgroundTint="#1C2B37"
    android:paddingTop="10dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/appHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:scrollbarSize="16dp"
        android:text="Account Title"
        android:textColor="#3F7FB6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:scrollbarSize="16dp"
        android:text="Email"
        android:textColor="#81869A"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appHeading" />

    <TextView
        android:id="@+id/pwdHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:scrollbarSize="16dp"
        android:text="Password"
        android:textColor="#81869A"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appHeading" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/viewPasswordButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_outline_24"
            android:backgroundTint="@color/text_blue"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/moreButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_more_vert_24"
            android:backgroundTint="@color/text_blue"
            android:scaleX="1"
            android:scaleY="1"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>