<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#16222B"
    android:outlineAmbientShadowColor="@android:color/transparent"
    android:outlineSpotShadowColor="@android:color/transparent"
    android:translationX="0dp"
    android:translationY="0dp"
    android:translationZ="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/MySafeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="My Safe"
            android:textColor="#3F7FB6"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_search_24"
            android:backgroundTint="@color/text_blue"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addCredentialsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_add_24"
            android:backgroundTint="@color/text_blue"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="0"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/navbar"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_nav">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.569">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/noCredentialsView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <ImageView
            android:id="@+id/noCredentialsImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/ic_lock"
            app:tint="@color/text_blue" />

        <TextView
            android:id="@+id/noCredentialsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="You have no saved credentials yet"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#2F5270"
            android:textSize="22sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="#203043"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:translationY="-110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:autofillHints="Search..."
            android:background="@drawable/rounded_inputbox"
            android:backgroundTint="#16222B"
            android:ems="10"
            android:hint="Search..."
            android:inputType="textVisiblePassword"
            android:paddingHorizontal="12dp"
            android:textColor="@color/text_blue"
            android:textColorHint="@color/text_blue"
            app:boxBackgroundMode="none"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/closeSearchView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_add_24"
            android:backgroundTint="@color/text_blue"
            android:rotation="45"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>